--- a/GAF.Api/appsettings.json
+++ b/GAF.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conexao" : "sever=localhost;port=3306;database=finances;uid=root;pwd=''"
+  },
+  "JwtSettings" : {
+    "SecretKey" : "FranneEamor123456789123456789123",
+    "Issuer": "Gaf.Api",
+    "Audience": "Gaf.ApiUsers",
+    "ExpirationInMinutes": 60
+    }
 }
